first add source

--- a/usbCameraTest4/src/main/res/drawable/border.xml
+++ b/usbCameraTest4/src/main/res/drawable/border.xml
@@ -27,7 +27,7 @@
 
     <stroke
         android:width="3px"
-        android:color="@color/GRAY" />
+        android:color="@color/TOMATO" />
 
     <!-- <solid android:color="@color/TRANSPARENT" />　 -->
     <solid android:color="@null" />
