修改字符串

--- a/usbCameraTest4/src/main/res/layout/test_fragment_main.xml
+++ b/usbCameraTest4/src/main/res/layout/test_fragment_main.xml
@@ -41,5 +41,13 @@
         android:layout_width="300dp"
         android:layout_height="200dp" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/camera_view_sub2"
+        android:layout_centerHorizontal="true"
+        android:text="@string/camera_notice"
+        android:textAlignment="center"
+        />
 
 </RelativeLayout>
