--- a/usbCameraTest4/src/main/res/layout/test_fragment_main.xml
+++ b/usbCameraTest4/src/main/res/layout/test_fragment_main.xml
@@ -44,9 +44,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/camera_view_sub2"
+        android:layout_alignBottom="@+id/camera_view_sub2"
         android:layout_centerHorizontal="true"
+        android:paddingBottom="2dp"
         android:text="@string/camera_notice"
+        android:textColor="@color/WHITE"
         android:textAlignment="center"
         />
 
